Updated CSS and added SEO

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Contact</title>
+    <title>Contact us about croissants</title>
   </head>
   <body>
     <h1>Contact for more information</h1>
-    <a href="/">Back to homepage</a>
+    <footer><a href="/">Back to homepage</a></footer>
   </body>
 </html>
