--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Learn more about croissants" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Croissant</title>
+    <title>Information about Croissants</title>
   </head>
   <body>
     <h1>This is a website about a croissant</h1>
-    <a href="/contact.html">Contact</a>
-    <br />
-    <a href="/photo.html">Photo</a>
+    <p>
+      A croissant is a buttery, flaky, French viennoiserie pastry inspired by
+      the shape of the Austrian kipferl but using the French yeast-leavened
+      laminated dough.
+    </p>
+    <div class="links">
+      <a href="/contact.html">Contact</a>
+      <br />
+      <a href="/photo.html">Photo</a>
+    </div>
   </body>
 </html>
