--- a/photo.html
+++ b/photo.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="See images of croissants" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Photo</title>
+    <title>A photo of a croissant</title>
   </head>
   <body>
     <h1>This is a croissant</h1>
     <img
       src="https://s3.amazonaws.com/finecooking.s3.tauntonclud.com/app/uploads/2017/04/18133547/051097061-01-croissants-main.jpg"
-      alt="Croissant"
+      alt="Freshly cooked croissant"
     />
-    <br />
-    <a href="/">Back to homepage</a>
+    <footer><a href="/">Back to homepage</a></footer>
   </body>
 </html>
